#4 Button add style

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -9,6 +9,7 @@
     },
     "button": {
       "english": "English",
+      "back" : "الدفع",
       "arabic": "ةيب رعلا",
       "start": "بداية",
       "primary": "ModalButton",
