--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -48,6 +48,7 @@
   },
   "header": {
     "booking": "الحجز للحدث",
+    "Login": "تسجيل الدخول إلى حسابك",
     "play": "اللعب المفتوح",
     "shop": "ورش عمل",
     "gallery": "صالة عرض",
@@ -150,9 +151,9 @@
       "aboutPackageParagraphThird":"لوريم إيبسوم هو ببساطة نص شكلي يستخدم في صناعة الطباعة والتنضيد. كان Lorem Ipsum هو النص الوهمي القياسي في الصناعة منذ القرن الخامس عشر الميلادي ، عندما أخذت طابعة غير معروفة لوحًا من النوع وتدافعت عليه لعمل كتاب عينة. لقد نجت ليس فقط خمسة قرون ، ولكن أيضًا القفزة في التنضيد الإلكتروني."
     }
   },
-  "signUp": {
+  "signUpForm": {
     "login": "تسجيل الدخول",
-    "forgetPassword": "هل نسيت كلمة السر",
+    "forgetPassword": "هل نسيت كلمة السر؟",
     "newUser": "ليس لديك حساب",
     "signUp": "اشتراك",
     "loginButtonText": "تسجيل الدخول",
