--- a/i18n/en.json
+++ b/i18n/en.json
@@ -52,6 +52,7 @@
     },
     "header":{
       "booking":"BOOKING FOR EVENT",
+      "Login": "Login to your account",
       "play":"OPEN PLAY",
       "shop":"WORKSHOPS",
       "gallery":"GALLERY",
@@ -72,7 +73,7 @@
       "incSym": "Includes special symbol"
     },
     "formText":{
-      "signUp":"Sign up",
+      "signUp":"Sign up now",
       "name": "Name",
       "email": "Email",
       "phoneNumber": "Phone Number",
@@ -170,7 +171,7 @@
   },
   "signUpForm": {
     "login": "Log in",
-    "forgetPassword": "Forgot Password",
+    "forgetPassword": "Forgot password?",
     "newUser": "Don't have an account? ",
     "signUp": "Sign up",
     "loginButtonText": "Login",
@@ -304,3 +305,4 @@
      "selectDate":"Select from calendar"
 }
 }
+
