--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -66,7 +66,7 @@
       "signUp": "اشتراك",
       "name": "اسم",
       "email": "بريد إلكتروني",
-      "phone number": "رقم التليفون",
+      "phoneNumber": "رقم التليفون",
       "continue": "يكمل",
       "forgetPassword": "هل نسيت كلمة السر",
       "newUser": "ليس لديك حساب؟",
