--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -46,6 +46,11 @@
   "premiumCard": {
     "premiumCardTitle": "شهريا ، تدفع سنويا"
   },
+  "modal":{
+    "forgotPassword":{
+      "text":"يرجى إدخال بريدك الإلكتروني المسجل أو رقم هاتفك لتلقي رابط إعادة التعيين."
+    }
+  },
   "header": {
     "booking": "الحجز للحدث",
     "play": "اللعب المفتوح",
