#9 api with phone

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -48,7 +48,9 @@
   },
   "modal":{
     "forgotPassword":{
-      "text":"يرجى إدخال بريدك الإلكتروني المسجل أو رقم هاتفك لتلقي رابط إعادة التعيين."
+      "text":"يرجى إدخال بريدك الإلكتروني المسجل أو رقم هاتفك لتلقي رابط إعادة التعيين.",
+      "phone":"رقم الهاتف غير موجود",
+      "email":"البريد الإلكتروني غير موجود"
     }
   },
   "header": {
