--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -48,6 +48,7 @@
   },
   "header": {
     "booking": "الحجز للحدث",
+    "signUp": "إنشاء حساب",
     "Login": "تسجيل الدخول إلى حسابك",
     "play": "اللعب المفتوح",
     "shop": "ورش عمل",
