--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -50,7 +50,9 @@
     "forgotPassword":{
       "text":"يرجى إدخال بريدك الإلكتروني المسجل أو رقم هاتفك لتلقي رابط إعادة التعيين.",
       "phone":"رقم الهاتف غير موجود",
-      "email":"البريد الإلكتروني غير موجود"
+      "email":"البريد الإلكتروني غير موجود",
+      "InvalidEmail" : "بريد إلكتروني خاطئ",
+      "InvalidNumber" : "رقم الهاتف غير صحيح"
     }
   },
   "header": {
@@ -62,6 +64,7 @@
   },
   "authentication": {
     "invalidEmail": "بريد إلكتروني خاطئ",
+    "InvalidPhone" : "رقم الهاتف غير صالح",
     "strings": {
       "incChar": "يتألف من 6 أحرف على الأقل",
       "incNum": "يشمل الرقم",
