--- a/i18n/en.json
+++ b/i18n/en.json
@@ -54,7 +54,9 @@
       "forgotPassword":{
         "text":"Please enter your registered email or phone number to receive the reset link.",
         "phone":"phone number not found",
-        "email":"email not found"
+        "email":"email not found",
+        "InvalidEmail" : "Invalid email",
+        "InvalidNumber" : "Invalid phone number"
       }
     },
     "header":{
@@ -71,6 +73,7 @@
     },
   "authentication": {
     "invalidEmail": "Invalid email",
+    "InvalidPhone" : "Invalid phone",
     "strings": {
       "incChar": "Includes at least 6 characters",
       "incNum": "Includes number",
