--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -73,6 +73,7 @@
       "signUp": "اشتراك",
       "WriteEmail": "اكتب بريدك الإلكتروني",
       "WritePassword": "اكتب كلمة المرور الخاصة بك",
+      "WriteName": "اكتب اسمك",
       "name": "اسم",
       "email": "بريد إلكتروني",
       "phone number": "رقم التليفون",
