--- a/i18n/en.json
+++ b/i18n/en.json
@@ -82,6 +82,7 @@
       "signUp": "Sign up now",
       "WriteEmail": "Write your email",
       "WritePassword": "Write your password",
+      "WriteName": "Write your name",
       "name": "Name",
       "email": "Email",
       "phoneNumber": "Phone Number",
