Login name change

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -49,7 +49,7 @@
   "header": {
     "booking": "الحجز للحدث",
     "signUp": "إنشاء حساب",
-    "Login": "تسجيل الدخول إلى حسابك",
+    "login": "تسجيل الدخول إلى حسابك",
     "play": "اللعب المفتوح",
     "shop": "ورش عمل",
     "gallery": "صالة عرض",
