#29 profile page started

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -39,268 +39,14 @@
       "workShops": "Workshops",
       "booking": "Booking"
     }
-},
-    "card":{
-      "heading":"Package",
-      "availableSeats":"Available Seats:",
-      "buyNow":"Buy now",
-      "seeDetails":"See details",
-      "moreDetail": "More details"
-    },
-    "premiumCard": {
-      "premiumCardTitle": "Per month, billed annually"
-    },
-    "header":{
-      "booking":"BOOKING FOR EVENT",
-      "play":"OPEN PLAY",
-      "shop":"WORKSHOPS",
-      "gallery":"GALLERY",
-      "contact":"CONTACT US",
-      "visit":"VISIT",
-      "save": "Save",
-      "see details": "See details",
-      "buy now": "Buy now",
-      "available seat": "Available seat:"
-    },
-  "authentication": {
-    "invalidEmail": "Invalid email",
-    "strings": {
-      "incChar": "Includes at least 6 characters",
-      "incNum": "Includes number",
-      "incLower": "Includes lowercase letter",
-      "incUpper": "Includes uppercase letter",
-      "incSym": "Includes special symbol"
-    },
-    "formText":{
-      "signUp":"Sign up",
-      "name": "Name",
-      "email": "Email",
-      "phoneNumber": "Phone Number",
-      "continue": "Continue",
-      "forgetPassword":"Forgot Password",
-      "newUser":"Don't have an account?",
-      "login": "Login",
-      "agreeText":"I agree to the ",
-      "termsAndConditions": "Terms and Conditions",
-      "invalidNumber": "Invalid number",
-      "namePlaceholder": "Name",
-      "emailPlaceholder": "Email",
-      "errorMessage":"This email or password is incorrect, please try again"
-    },
-    "signupVerification":{
-      "verificationText": "Verification",
-      "verificationCodeText":"Please type the code sent to ",
-      "createPasswordText": "Create password",
-      "password": "Password",
-      "confirmPassword": "Confirm password",
-      "includedText": "Must contain at least 1 upper case, numeric, and special character",
-      "backButton":"Back",
-      "continue":"Continue",
-      "passwordPlaceholder": "Write password",
-      "newKid":"Add new Kids Detail",
-      "kidName":"What’s you Kid’s name",
-      "skip" :"Skip for now",
-      "kidInfoPlaceholder":"Kid's name",
-      "kidDOB": "What's your Kid's Date of Birth",
-      "previousButtonText": "Previous",
-      "datePlaceholder":"DD",
-      "monthPlaceholder":"MM",
-      "yearPlaceholder":"YYYY"
-    }
   },
-  "dataBox": {
-    "selectThisDetails": "Select this details",
-    "addKidDetails": "Add new kid’s details",
-    "selectedData" : "Selected"
-  },
-  "sidebar": {
-    "useProfile": "User profile",
-    "userStatus": "User status",
-    "accountDetails": "Account details",
-    "changePassword": "Change password",
-    "kidDetails": "Kid's details",
-    "termsAndConditions": "Terms & Conditions",
-    "becomeMember": "Become member",
-    "logOut": "Logout"
-  },
-  "footer": {
-    "welcome": "Welcome to Playwheel,",
-    "paragraph": "Lorem ipsum dolor sit amet. Eos sint obcaecati ad consequuntur odit qui iure quod. Hic nemo repudiandae aut maiores praesentium nam enim error ut numquam dignissimos. .",
-    "story": "Our Story",
-    "contact": "Contact Us",
-    "location": "Lorem ipsum, xyz dolor sit amet.",
-    "email": "info@playwheel.com",
-    "privacy": "Privacy Policy",
-    "condition": "Terms & Conditions",
-    "policy": "Cookie Policy",
-    "question": "Have questions?",
-    "checkOur": "Check our",
-    "frequentlyAskedQuestions": "Frequently Asked Questions",
-    "or": "or",
-    "contactUs": " Contact Us",
-    "copyRight": "Copyright © 2022 Playwheel. All Rights Reserved",
-    "languageOne": "english",
-    "languageTwo": "arabic"
-  },
-  "homePage": {
-    "playWheelPara": ", A fun filled place for everyone to enjoy",
-    "playWheelParaSec": "Every visit is unique, and people of all ages are welcome. We promise it's a comfortable atmosphere for good wholesome fun. There is really no right or wrong, only infinite possibilities and adventures!",
-    "homesecondFragment": {
-      "heading": "Check out Open Play",
-      "para": "Bring your kids to our Open Play for a safe and fun experience filled with a variety of activities and games. Our Open Play includes climbing structures, slides, interactive stations, and craft tables to entertain children of all ages. Our friendly and experienced staff is always present to ensure a safe and enjoyable experience.",
-      "checkAvailability": "Check availability",
-      "learnMore": "Learn more"
-    },
-    "childInfoFragment": {
-      "heading": "Workshop",
-      "seeAll": "See all"
-    },
-    "bookingForEventsFragment": {
-      "heading": "Booking For Events",
-      "para": "Book a variety of exciting events for kids on our website, including birthday parties and educational workshops. With something for every child's interests and age group, our booking process is quick and easy. Give your child an experience they'll never forget by booking an event today.",
-      "bookNow": "Book Now",
-      "aboutPackageParagraphFirst":"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.",
-      "aboutPackageParagraphSecond":"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.",
-      "aboutPackageParagraphThird":"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting."
-    },
-    "visitCarouselFragment": {
-      "heading": "Visit",
-      "seeMore": "See more"
-    }
-  },
-  "signUpForm": {
-    "login": "Log in",
-    "forgetPassword": "Forgot Password",
-    "newUser": "Don't have an account? ",
-    "signUp": "Sign up",
-    "loginButtonText": "Login",
-    "subText": "We'll send a E-Mail to reset your password",
-    "backToLogin": "Back to Login",
-    "continue": "Continue",
-    "passwordLength": "must be at least 8 characters",
-    "errorMessage": "This email can’t be found, make sure email is incorrect"
-  },
-  "footerPages": {
-    "privacyPolicy": "Privacy policy",
-    "cookiesPolicy": "Cookie policy",
-    "ourStory": "Our story",
-    "faqQuestion": "Frequently asked questions"
-  },
-  "paymentModal": {
-    "buttonText": "Done",
-    "paymentStatus": "Your payment is successful",
-    "item": "Items:",
-    "totalItem": "Total:"
-  },
-  "cartPage": {
-    "heading": "Your cart",
-    "placeholder": "Add coupon code",
-    "itemPrice": "items price",
-    "totalAmount": "Total price",
-    "buttonText": "Proceed to payment"
-  },
-  "termsAndConditions": {
-    "condition": "Terms and condition"
-  },
-  "userStatus": {
-    "InvoicesTitle": "Invoices",
-    "userId": "Invoice ID",
-    "promos": "Promos",
-    "booking": "Bookings",
-    "userDecription": "Ticket booking",
-    "planDate": "Date",
-    "amount": "Amount"
-  },
-  "userProfile":{
-    "accountDetails":{
-      "name":"Name",
-      "placeholder":"User name",
-      "email":"Email",
-      "emailPlaceholder":"John.doe@gmail.com",
-      "phoneNumber":"Phone number",
-      "saveChanges":"Save changes",
-      "changeAvatar":"Change avatar"
-     },
-     "changePassword":{
-      "currentPassword":"Current password",
-      "newPassword":"New password",
-      "confirmNewPassword":"Confirm new password",
-      "passwordSame":"Passwords are not same",
-      "placeholder":"Write password",
-      "saveCanges":"Save changes"
-    }
-  },
-  "contactUs":{
-    "imageHeading":"Get in touch",
-    "imageParagraph":"We’d love to hear from you",
-    "contactTitle":"Contact details",
-    "contactDetails":"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.",
-    "location":"Location map",
-    "buttonAboveHeadingOne":"Browse our FAQs",
-    "buttonAboveHeadingTwo":"Get in touch with us",
-    "buttonText1":"Browse FAQs",
-    "buttonText2":"Send feedbacks"
-  },
-  "becomeMember":{
-    "playWheelMember":"Become Playwheel member",
-    "memberParagraph":"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the was popularised in the 1960s with the release of Letraset sheets containing."
-  },
-  "bookingForEvent":{
-    "aboutMultipurposeText": "About multipurpose hall & services",
-    "galleryText": "Gallery",
-    "bookingForEventText":"Booking for events",
-    "packagePriceText":  "Package price",
-    "addToCartText": "Add to cart",
-    "checkOutNowText": "Check out now",
-    "totalPriceText": "Total price",
-    "addOnPriceText": "Add-ons price",
-    "addOnsText": "Add-ons",
-    "addOnNameText": "Add-on name",
-    "chooseDateText": "Choose date and time",
-    "checkoutText": "Checkout",
-    "addCouponText": "Add coupon code",
-    "paymentProceedButtonText":"Proceed to payment",
-    "bookingForEventHeading":"Book For Events"
-
-  },
-  "kidZone":{
-    "heading":"Open Play",
-    "availableAndTiming":"Availability & Timings",
-    "timing":"Timings:",
-    "availableSlots":"Available slots",
-    "services":"Services",
-    "selectDate":"Select date"
-    },
-  "addKidDetails": {
-    "kidName": "Kid’s name",
-    "kidNamePlaceholder":"Write name",
-    "kidDateOfBirthText":"Kid's Date of Birth",
-    "kidFavouriteColor":"Favorite color",
-    "kidFavouriteColorPlaceholder":"Write color",
-    "nextButton":"Next ",
-    "previousButtonText" : "Previous",
-    "saveButtonText" : "Save",
-    "editKidDetails": "Edit kid’s detail"
-  },
-  "workshop":{
-    "workshopHeadingOne":"Ongoing Workshop",
-    "workshopHeadingTwo":"Upcoming workshops",
-    "aboutWorkshop":"About workshop",
-    "aboutOrganizer":"About organizer",
-    "workshopCardHeading":"Name of the workshop",
-    "buttonText":"Buy now",
-    "progressbarText":"Seat available",
-     "bookingWorkshop":"Booking for workshop",
-     "choosekidDetails":"Choose kids details",
-     "addKidDetails":"Add new kid’s details",
-     "workshopName":"Workshop name here",
-     "buttonTextOne":"Add to cart",
-     "buttonTextTwo":"Check out now",
-     "workshopImageHeading":"Workshops",
-     "calenderButtonText":"Select from calendar",
-     "workshopParagraphFirst":"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.",
-     "workshopParagraphSecond":"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.",
-     "workshopParagraphThird":"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.",
-     "selectDate":"Select from calendar"
-}
+  "profile":{
+    "heading":"My profile",
+    "buttonChange":"Change",
+    "buttonRemove":"Remove",
+    "name":"Name",
+    "email":"Email",
+    "phoneNumber":"Phone Number",
+    "password":"Password"
+  }
 }
