--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -1,4 +1,11 @@
 {
+  "frequentlyAskedQuestions" : {
+    "heading": "أسئلة مكررة",
+    "search": "يبحث",
+    "loremIpsum": "أبجد هوز دولور الجلوس امات",
+    "faqQuestion": "ما هي الأسئلة الشائعة؟",
+    "faqAns": "الوقوع الصدغي من العمل ودولور ماجنا أليكوا.المساعدة في الحد الأدنى من التمرين ، تمرين الخمار."
+  },
   "global": {
     "playwheel":"دولاب اللعب",
     "label": {
