--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -67,8 +67,8 @@
     },
     "formText": {
       "signUp": "اشتراك",
-      "WriteEmail": "اكتب بريدك الإلكتروني",
-      "WritePassword": "اكتب كلمة المرور الخاصة بك",
+      "writeEmail": "اكتب بريدك الإلكتروني",
+      "writePassword": "اكتب كلمة المرور الخاصة بك",
       "name": "اسم",
       "email": "بريد إلكتروني",
       "phone number": "رقم التليفون",
