#29 change phone number modal has been added

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -51,7 +51,19 @@
       "newPassword":"كلمة المرور الجديدة",
       "confirmPassword":"تأكيد كلمة المرور",
       "passwordLength": "يجب ألا يقل عن 8 أحرف",
-      "passwordSuccessful":"تم تغيير كلمة المرور بنجاح"
-    }
+      "passwordSuccessful":"تم تغيير كلمة المرور بنجاح",
+      "changeEmail":"تغيير الايميل",
+      "emailPara":"الرجاء إدخال عنوان البريد الإلكتروني الجديد الذي ترغب في تغييره.",
+      "email":"بريد إلكتروني",
+      "verifyOtp":"التحقق من البريد الإلكتروني",
+      "emailOtpPara":"لقد أرسلنا OTP في بريدك الإلكتروني. الرجاء إدخال OTP للتحقق.",
+      "resendCode":"ألم تحصل على الرمز؟",
+      "resendText":"أعد إرسال الرمز",
+      "emailChanged":"تم تغيير عنوان البريد الإلكتروني بنجاح.",
+      "phoneChanged":"تم تغيير رقم الهاتف بنجاح."
+    },
+    "error":{
+      "mailError":"البريد الإلكتروني غير صالح."
   }
+}
 }
