edit json text name

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -53,7 +53,7 @@
   "header": {
     "booking": "BOOKING FOR EVENT",
     "signUp": "Create account",
-    "Login": "Login to your account",
+    "login": "Login to your account",
     "play": "OPEN PLAY",
     "shop": "WORKSHOPS",
     "gallery": "GALLERY",
