edit json text name

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -56,8 +56,8 @@
     "contact": "اتصل بنا",
     "visit": "يزور",
     "save": "يحفظ",
-    "see details": "انظر التفاصيل",
-    "buy now": "اشتري الآن",
+    "seeDetails": "انظر التفاصيل",
+    "buyNow": "اشتري الآن",
     "available seat": "مقعد متاح:",
     "resendVerification": "إعادة التحقق",
     "emailSuccessfully": "إعادة إرسال المستخدم التحقق",
