--- a/i18n/en.json
+++ b/i18n/en.json
@@ -60,8 +60,8 @@
     "contact": "CONTACT US",
     "visit": "VISIT",
     "save": "Save",
-    "see details": "See details",
-    "buy now": "Buy now",
+    "seeDetails": "See details",
+    "buyNow": "Buy now",
     "available seat": "Available seat:",
     "resendVerification": "Resend Verification",
     "emailSuccessfully": "user resendVerificationEmail in successfully!",
