add en.json text

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -32,8 +32,8 @@
       "pay": "Pay Now",
       "submit": "submit",
       "save": "Save",
-      "see details": "See details",
-      "buy now": "Buy now",
+      "seeDetails": "See details",
+      "buyNow": "Buy now",
       "available seat": "Available seat:",
       "openPlay": "Open play",
       "workShops": "Workshops",
