edit json text name

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -33,7 +33,7 @@
       "save": "يحفظ",
       "seeDetails": "انظر التفاصيل",
       "buyNow": "اشتري الآن",
-      "available seat": "مقعد متاح:"
+      "availableSeat": "مقعد متاح:"
     }
   },
   "card": {
