#29 setting and address are done checkinh RTL in profile page

--- a/i18n/ar.json
+++ b/i18n/ar.json
@@ -80,8 +80,12 @@
       "district":"يصرف",
       "code":"رمز بريدي"
     },
+    "setting":{
+      "heading":"جلسة",
+      "changeLanguage":"تغيير اللغة"
+    },
     "error":{
       "mailError":"البريد الإلكتروني غير صالح."
+    }
   }
-}
 }
